# OpenArms

./: openArm_final_pkgpaths.urdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_description/lib/arm_description/: arm_node
install/arm_description/share/ament_index/resource_index/package_run_dependencies/: arm_description
install/arm_description/share/ament_index/resource_index/parent_prefix_path/: arm_description
install/arm_description/share/arm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arm_description/share/arm_description/cmake/: arm_descriptionConfig-version.cmake  arm_descriptionConfig.cmake
install/arm_description/share/arm_description/environment/: ament_prefix_path.dsv  gz_sim_resource_path.dsv  path.dsv
install/arm_description/share/arm_description/launch/: display.launch.py
install/arm_description/share/arm_description/meshes/: Elbow-pulley.stl  Elbow-spacer.stl  End-adapter.stl  Inner-segment-1.stl  Lidar-mount.stl  Link2.stl  Link4.stl  Motor-2.stl  Motor1.stl  Motor3.stl  Outer-Segment-1.stl  Rotating-base.stl  Segment-2.stl  Shoulder-pulley-top.stl  Shoulder-pulley.stl  Solid-Base.stl  base_link.stl  lidar-scanner.stl
install/arm_description/share/arm_description/rviz/: urdf.rviz
install/arm_description/share/arm_description/urdf/: OpenArm.urdf  OpenArm_V1.urdf  openArm,M2.urdf  openArm.urdf  openArmM2.urdf
log/: latest_build  latest_list
src/arm_description/: CMakeLists.txt
src/arm_description/launch/: display.launch.py
src/arm_description/src/: arm_node  arm_node.cpp
